@@ -10,46 +10,87 @@
     android:paddingLeft="20dip"
     android:paddingRight="20dip" >
 
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:textStyle="bold"
-		android:text="Line 1">
-	</TextView>
-	<EditText android:text="Show Line 1" android:id="@+id/txtShowField1"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:visibility="visible" android:freezesText="true">
-	</EditText>
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:textStyle="bold" android:text="Line 2">
-	</TextView>
-	<EditText android:text="Show Line 2" android:id="@+id/txtShowField2"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:visibility="visible" android:freezesText="true">
-	</EditText>
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:textStyle="bold" android:text="Status Bar">
-	</TextView>
-	<EditText android:text="status bar" android:id="@+id/txtStatusBar"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:visibility="visible" android:freezesText="true">
-	</EditText>
-		<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:textStyle="bold" android:text="Media Track">
-	</TextView>
-	<EditText android:text="Media Track" android:id="@+id/txtMediaTrack"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:visibility="visible" android:freezesText="true">
-	</EditText>
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:textStyle="bold" android:text="Media Clock">
-	</TextView>
-	<EditText android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:id="@+id/txtMediaClock"
-		android:text="12:34">
-	</EditText>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Line 1"
+        android:textStyle="bold" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/txtShowField1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:freezesText="true"
+        android:text="Show Line 1"
+        android:visibility="visible" >
+    </EditText>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Line 2"
+        android:textStyle="bold" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/txtShowField2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:freezesText="true"
+        android:text="Show Line 2"
+        android:visibility="visible" >
+    </EditText>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Status Bar"
+        android:textStyle="bold" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/txtStatusBar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:freezesText="true"
+        android:text="status bar"
+        android:visibility="visible" >
+    </EditText>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Media Track"
+        android:textStyle="bold" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/txtMediaTrack"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:freezesText="true"
+        android:text="Media Track"
+        android:visibility="visible" >
+    </EditText>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Media Clock"
+        android:textStyle="bold" >
+    </TextView>
+
+    <EditText
+        android:id="@+id/txtMediaClock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="12:34" >
+    </EditText>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,5 +109,23 @@
             android:layout_height="wrap_content"
             android:text="Soft Buttons" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Custom Presets (comma-separated)"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/show_customPresets"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:ems="10"
+        android:freezesText="true"
+        android:inputType="textCapWords"
+        android:text="GEN0,GEN1,GEN2,GEN3,GEN4,GEN5"
+        android:visibility="visible" />
 
 </LinearLayout>
