@@ -1,4 +1,5 @@
 [CW2]
++ Show dialog: allow to set custom presets (as a comma-separated string).
 + AddCommand dialog: allow to set icon.
 * SyncProxyAndroid SDK: fix AddCommand's setCmdIcon method.
 + Alert, ScrollableMessage, Show dialogs: allow to set soft buttons.
